datafusion-cli/tests/snapshots/cli_memory_disable_stops_report@memory_disable_stops_report.snap
---
source: datafusion-cli/tests/cli_integration.rs
info:
  program: datafusion-cli
  args:
    - "-q"
  stdin: "\\memory_profiling\nselect 1;\n\\memory_profiling\nselect 1;\n"
---
success: true
exit_code: 0
----- stdout -----
Memory profiling enabled
+----------+
| Int64(1) |
+----------+
| 1        |
+----------+
Peak memory usage: XB
Cumulative allocations: XB
Memory usage by operator:
Other: XB

Memory profiling disabled
+----------+
| Int64(1) |
+----------+
| 1        |
+----------+
\q

----- stderr -----
