datafusion-cli/tests/snapshots/cli_memory_disable_then_show@memory_disable_then_show.snap
---
source: datafusion-cli/tests/cli_integration.rs
info:
  program: datafusion-cli
  args:
    - "-q"
  stdin: "\\memory_profiling disable\n\\memory_profiling show\n"
---
success: true
exit_code: 0
----- stdout -----
Memory profiling disabled
no memory metrics recorded
\q

----- stderr -----
