datafusion-cli/tests/snapshots/cli_memory_enable_show@memory_enable_show.snap
---
source: datafusion-cli/tests/cli_integration.rs
info:
  program: datafusion-cli
  args:
    - "-q"
  stdin: "\\memory_profiling enable\nselect 1;\n\\memory_profiling show\n"
---
success: true
exit_code: 0
----- stdout -----
Memory profiling enabled for next query
+----------+
| Int64(1) |
+----------+
| 1        |
+----------+

📊 Enhanced Memory Analysis:
🔍 Top Memory Consumers:
  1. DataFusion-Cli: 0.00 MB (100.0%) [Other]

📈 Memory Summary:
  Peak memory usage: 0.00 MB
  Total tracked memory: 0.00 MB
\q

----- stderr -----
