datafusion-cli/tests/snapshots/cli_memory_show_without_enable@memory_show_without_enable.snap
---
source: datafusion-cli/tests/cli_integration.rs
info:
  program: datafusion-cli
  args:
    - "-q"
  stdin: "\\memory_profiling show\n"
---
success: true
exit_code: 0
----- stdout -----
no memory metrics recorded
\q

----- stderr -----
