datafusion-cli/tests/snapshots/cli_quick_test@backslash.snap
---
source: datafusion-cli/tests/cli_integration.rs
info:
  program: datafusion-cli
  args:
    - "--file"
    - tests/sql/backslash.sql
    - "--format"
    - json
    - "-q"
---
success: true
exit_code: 0
----- stdout -----
[{"backslash1":"\\","backslash2":"\\","backslash3":"\\\\\\","text_backslashes":"dsdsds\\\\","tab_char":"\t","null_char":"\u0000","newline_char":"\n"}]

----- stderr -----
