datafusion-cli/tests/snapshots/cli_quick_test@batch_size.snap
---
source: datafusion-cli/tests/cli_integration.rs
info:
  program: datafusion-cli
  args:
    - "--command"
    - show datafusion.execution.batch_size
    - "-q"
    - "-b"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
+---------------------------------+-------+
| name                            | value |
+---------------------------------+-------+
| datafusion.execution.batch_size | 1     |
+---------------------------------+-------+
Peak memory usage: 17.5 KB
Cumulative allocations: 17.5 KB
Memory usage by operator:
Other: 48.0 B
Repartition: 17.5 KB


----- stderr -----
