datafusion-cli/tests/snapshots/cli_quick_test@can_see_indent_format.snap
---
source: datafusion-cli/tests/cli_integration.rs
info:
  program: datafusion-cli
  args:
    - "--command"
    - EXPLAIN FORMAT indent SELECT 123
---
success: true
exit_code: 0
----- stdout -----
[CLI_VERSION]
+---------------+------------------------------------------+
| plan_type     | plan                                     |
+---------------+------------------------------------------+
| logical_plan  | Projection: Int64(123)                   |
|               |   EmptyRelation: rows=1                  |
| physical_plan | ProjectionExec: expr=[123 as Int64(123)] |
|               |   PlaceholderRowExec                     |
|               |                                          |
+---------------+------------------------------------------+
2 row(s) fetched. 
[ELAPSED]

Peak memory usage: 2.5 KB
Cumulative allocations: 2.5 KB
Memory usage by operator:
Other: 2.5 KB


----- stderr -----
