datafusion-cli/tests/snapshots/cli_quick_test@default_explain_plan.snap
---
source: datafusion-cli/tests/cli_integration.rs
info:
  program: datafusion-cli
  args:
    - "--command"
    - EXPLAIN SELECT 123
---
success: true
exit_code: 0
----- stdout -----
[CLI_VERSION]
+---------------+-------------------------------+
| plan_type     | plan                          |
+---------------+-------------------------------+
| physical_plan | ┌───────────────────────────┐ |
|               | │       ProjectionExec      │ |
|               | │    --------------------   │ |
|               | │      Int64(123): 123      │ |
|               | └─────────────┬─────────────┘ |
|               | ┌─────────────┴─────────────┐ |
|               | │     PlaceholderRowExec    │ |
|               | └───────────────────────────┘ |
|               |                               |
+---------------+-------------------------------+
1 row(s) fetched. 
[ELAPSED]

Peak memory usage: 2.1 KB
Cumulative allocations: 2.1 KB
Memory usage by operator:
Other: 2.1 KB


----- stderr -----
